terminado correccion a arreglo menores y perfil nosotros

--- a/src/app/modales/capsula-detallado/capsula-detallado.component.css
+++ b/src/app/modales/capsula-detallado/capsula-detallado.component.css
@@ -5,6 +5,7 @@
     background-color: rgb(71, 71, 71);
     height: auto;
     padding-bottom: 5rem;
+    color: white;
   }
   
   img {
@@ -41,4 +42,9 @@
   
   table{
       width: 800px;
+  }
+
+  .textoNoInfo{
+    text-align: center;
+    font-family: "Comfortaa", sans-serif;
   }
