--- a/src/app/modales/capsula-detallado/capsula-detallado.component.html
+++ b/src/app/modales/capsula-detallado/capsula-detallado.component.html
@@ -46,7 +46,7 @@
         </table>
       </div>
     </div>
-<div *ngIf="capsulas.length == 0">
+<div *ngIf="capsulas.length == 0" class="textoNoInfo">
     <span>Este lanzamiento no tiene capsulas</span>
 </div>
 </div>
