--- a/src/app/paginas/detalle-pista/detalle-pista.component.css
+++ b/src/app/paginas/detalle-pista/detalle-pista.component.css
@@ -8,6 +8,7 @@
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
+    font-family: "Comfortaa", sans-serif;
 }
 .container img {
     height: 40rem;
