--- a/src/app/paginas/shared/footer/footer.component.html
+++ b/src/app/paginas/shared/footer/footer.component.html
@@ -3,6 +3,9 @@
         <img src="../../../../assets/logo/SpaceX_Logo_Black.png" alt="">
     </div>
     <div>
+        <a href="/info-nosotros">Informacion sobre desarrolladores</a>
+    </div>
+    <div>
         <ul>
             <li><a href="https://www.twitter.com/spacex" target="_blank"><i class="fa-brands fa-twitter" style="color: #ffffff;" title="twitter"></i></a></li>
             <li><a href="https://www.instagram.com/spacex" target="_blank"><i class="fa-brands fa-instagram" style="color: #ffffff;" title="instagram"></i></a></li>
