--- a/src/app/modales/core-detallado/core-detallado.component.css
+++ b/src/app/modales/core-detallado/core-detallado.component.css
@@ -1,41 +1,45 @@
 .conteiner {
-    padding: 1rem;
-    padding-left: 5rem;
-    padding-right: 5rem;
-    background-color: rgb(71, 71, 71);
-    color: white;
-  }
-  
-  img {
-    height: 300px;
-    border-top-right-radius: 20px;
-    border-top-left-radius: 20px;
-  }
-  
-  .titulo {
-    font-size: 2rem;
-    display: flex;
-    align-items: center;
+  padding: 1rem;
+  padding-left: 5rem;
+  padding-right: 5rem;
+  background-color: rgb(71, 71, 71);
+  color: white;
+}
+
+img {
+  height: 300px;
+  border-top-right-radius: 20px;
+  border-top-left-radius: 20px;
+  margin-bottom: 1rem;
+}
+
+.titulo {
+  font-size: 2rem;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  font-family: "Orbitron", sans-serif;
+}
+
+.titulo h2 {
+  margin: 0;
+  padding: 0;
+  margin: 1rem;
+  margin-bottom: 1.5rem;
+}
+
+.informacion {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+table {
+  width: 800px;
+}
+
+.textoNoInfo{
     text-align: center;
-    justify-content: center;
-    font-family: "Orbitron", sans-serif;
-  }
-  
-  .titulo h2 {
-    margin: 0;
-    padding: 0;
-    margin: 1rem;
-    margin-bottom: 1.5rem;
-  }
-  
-  .informacion{
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-  
-  }
-  
-  table{
-      width: 482.38px;
-  }
+}
