--- a/src/app/modales/core-detallado/core-detallado.component.html
+++ b/src/app/modales/core-detallado/core-detallado.component.html
@@ -28,7 +28,7 @@
 
         <ng-container matColumnDef="porcentaje">
           <th mat-header-cell *matHeaderCellDef>% de aterrizajes exitosos</th>
-          <td mat-cell *matCellDef="let element">{{ element.porcentaje }}</td>
+          <td mat-cell *matCellDef="let element">{{ element.porcentaje }}%</td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -36,7 +36,7 @@
       </table>
     </div>
   </div>
-  <div *ngIf="cores.length == 0">
+  <div *ngIf="cores.length == 0" class="textoNoInfo">
     <span>Este lanzamiento no tiene cores</span>
   </div>
 </div>
