--- a/src/app/modales/crew-detallado/crew-detallado.component.css
+++ b/src/app/modales/crew-detallado/crew-detallado.component.css
@@ -1,28 +1,48 @@
-img{
-    height: 700px;
-    display: flex;
-padding-left: 6rem;
+img {
+  height: 700px;
+  display: flex;
+  padding-left: 6rem;
 }
 
-.conteiner{
-    height: auto;
-    padding-top: 2rem;
-    padding-bottom: 3rem;
-    padding-left: 5rem;
-    padding-right: 5rem;
-    background-color: rgb(71, 71, 71);
-    font-family: 'Comfortaa', sans-serif;
-    color: white;
+.conteiner {
+  height: auto;
+  padding-top: 2rem;
+  padding-bottom: 3rem;
+  padding-left: 5rem;
+  padding-right: 5rem;
+  background-color: rgb(71, 71, 71);
+  font-family: "Comfortaa", sans-serif;
+  color: white;
 }
 
-.texto{
-    display: flex;
-    flex-direction: column;
-    padding-top: 1rem;
+.texto {
+  display: flex;
+  flex-direction: column;
+  padding-top: 1rem;
+  text-align: center;
+}
+
+h3 {
+  font-family: "Orbitron", sans-serif;
+  font-size: 2rem;
+}
+
+.titulo {
+  font-size: 2rem;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  font-family: "Orbitron", sans-serif;
+}
+
+.titulo h2 {
+  margin: 0;
+  padding: 0;
+  margin: 1rem;
+  margin-bottom: 1.5rem;
+}
+
+.textoNoInfo{
     text-align: center;
-}
-
-h3{
-    font-family: "Orbitron", sans-serif;
-    font-size: 2rem;
 }
