--- a/src/app/modales/lanzamiento-detallado/lanzamiento-detallado.component.html
+++ b/src/app/modales/lanzamiento-detallado/lanzamiento-detallado.component.html
@@ -10,7 +10,12 @@
     <div *ngIf="data.success == undefined" class="exitoso">
       <p class="sin-definir">Sin informacion</p>
     </div>
-    <image-slider [slides]="slides"></image-slider>
+    <div *ngIf="data.photo.length != 0">
+        <image-slider [slides]="slides"></image-slider>
+    </div>
+    <div *ngIf="data.photo.length == 0">
+        <img src="../../../assets/img/lanzamientoDefaut.jpg" alt="Imagen default">
+    </div>
   </div>
   <div class="texto">
     <div class="sector1">
