--- a/src/app/paginas/shared/footer/footer.component.css
+++ b/src/app/paginas/shared/footer/footer.component.css
@@ -18,3 +18,9 @@ ul li{
     margin: 10px;
     font-size: 30px;
 }
+
+a{
+    text-decoration: none;
+    font-family: "Comfortaa", sans-serif;
+    color: white;
+}
