--- a/src/app/modales/crew-detallado/crew-detallado.component.html
+++ b/src/app/modales/crew-detallado/crew-detallado.component.html
@@ -2,7 +2,7 @@
     <div class="titulo">
         <h2>Crew</h2>
     </div>
-  <div *ngIf="crew != null">
+  <div *ngIf="crew.length != 0">
     <mat-tab-group animationDuration="2000ms">
       <div class="card" *ngFor="let member of crew">
         <mat-tab label="{{ member.name }}">
