--- a/src/app/paginas/home/home.component.css
+++ b/src/app/paginas/home/home.component.css
@@ -15,7 +15,7 @@
 .company {
   width: 90%;
   text-align: center;
-  background-color: rgb(64, 64, 64);
+  background-color: rgba(64, 64, 64, 0.705);
   border-radius: 1rem;
   margin-top: 3rem;
   margin-bottom: 3rem;
