--- a/src/app/paginas/mis-datos/mis-datos.component.html
+++ b/src/app/paginas/mis-datos/mis-datos.component.html
@@ -3,7 +3,7 @@
   <div class="container-principal">
     <div class="izquierda">
       <div class="listaFormularios">
-        <button><h2>Formularios</h2></button>
+        <button (click)="modalFormularios()"><h2>Formularios</h2></button>
       </div>
     </div>
     <div class="centro">
