--- a/src/app/modales/ships-detallado/ships-detallado.component.html
+++ b/src/app/modales/ships-detallado/ships-detallado.component.html
@@ -1,6 +1,6 @@
 <div class="conteiner">
   <div class="titulo">
-    <h2>Crew</h2>
+    <h2>Ships</h2>
   </div>
   <div *ngIf="ships.length != 0">
     <mat-tab-group animationDuration="2000ms">
