--- a/src/app/paginas/mis-datos/mis-datos.component.html
+++ b/src/app/paginas/mis-datos/mis-datos.component.html
@@ -7,7 +7,7 @@
       </div>
     </div>
     <div class="centro">
-      <h2><i class="fa-solid fa-user-astronaut" style="color: #ffffff;"></i> {{ user.name }}</h2>
+      <h2><i class="fa-solid fa-user-astronaut" style="color: #ffffff;"></i> {{ user.name }} <i class="fa-solid fa-pen-to-square" style="color: #ffffff;"></i></h2>
       <div class="imgForms" *ngIf="user.gender === 'Mujer'">
         <img src="../../../assets/img/girlAstronauta.jpg" alt="" />
       </div>
