formulario ahora con username

--- a/src/app/modales/formularios/formularios.component.html
+++ b/src/app/modales/formularios/formularios.component.html
@@ -1,7 +1,3 @@
-<div *ngFor="let formulario of formularios">
-    {{ formulario.comentario }}
-</div>
-
 <div class="conteiner">
     <div class="titulo">
       <h2>Formularios</h2>
@@ -31,7 +27,7 @@
   
           <ng-container matColumnDef="eliminar">
             <th mat-header-cell *matHeaderCellDef>Eliminar</th>
-            <td mat-cell *matCellDef="let element"> <i class="fa-solid fa-trash" style="color: #ffffff;"></i> </td>
+            <td mat-cell *matCellDef="let element"> <i class="fa-solid fa-trash" style="color: #000000;"></i> </td>
           </ng-container>
   
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
