--- a/src/app/cards/pista/pista.component.html
+++ b/src/app/cards/pista/pista.component.html
@@ -10,7 +10,7 @@
     <span>En construcción</span>
   </div>
   <div class="imgPista">
-    <img src="{{ pista.images.large }}" alt="imagen pista" />
+    <img [src]="pista.images.large" alt="imagen pista" />
   </div>
   <div class="nombres">
     <h3>{{ pista.name }}</h3>
