--- a/src/app/paginas/eventos-historicos/eventos-historicos.component.html
+++ b/src/app/paginas/eventos-historicos/eventos-historicos.component.html
@@ -24,7 +24,7 @@
             >
           </div>
           <div class="link">
-            <a href="{{ auto.wiki }}" target="_blank"
+            <a href="{{ auto.wikipedia }}" target="_blank"
               >video de {{ auto.name }}</a
             >
           </div>
