--- a/src/app/paginas/mis-datos/mis-datos.component.css
+++ b/src/app/paginas/mis-datos/mis-datos.component.css
@@ -86,4 +86,18 @@ margin-left: 3rem;
     margin-left: 9rem;
 }
 
+.titulo{
+    display: flex;
+}
+
+.titulo button{
+    background-color: rgba(255, 255, 255, 0);
+    border: 0;
+    cursor: pointer;
+}
+
+.titulo button i{
+    font-size: 20px;
+}
+
 
