--- a/src/app/modales/crew-detallado/crew-detallado.component.html
+++ b/src/app/modales/crew-detallado/crew-detallado.component.html
@@ -5,7 +5,8 @@
   <div *ngIf="crew.length != 0">
     <mat-tab-group animationDuration="2000ms">
       <div class="card" *ngFor="let member of crew">
-        <mat-tab label="{{ member.name }}">
+        <div style="background-color: white;"><mat-tab label="{{ member.name }}">
+        
           <img
             *ngIf="member.image != null"
             src="{{ member.image }}"
@@ -14,7 +15,7 @@
           <div class="texto">
             <h3>{{ member.name }}</h3>
             <div class="status retired" *ngIf="member.status === 'retired'">
-              <span>Estado: Retirado</span>
+              <span>Estado: Retir ado</span>
             </div>
             <div class="status active" *ngIf="member.status === 'active'">
               <span>Estado: Activo</span>
@@ -22,6 +23,7 @@
             <p>Agencia: {{ member.agency }}</p>
           </div>
         </mat-tab>
+      </div>
       </div>
     </mat-tab-group>
   </div>
