componentes que no servian, loaders entre otros

--- a/src/app/modales/crew-detallado/crew-detallado.component.css
+++ b/src/app/modales/crew-detallado/crew-detallado.component.css
@@ -44,3 +44,15 @@ h3 {
 .textoNoInfo{
     text-align: center;
 }
+
+.mdc-tab__text-label{
+  color: white!important;
+}
+
+span.mdc-tab__text-label{
+  color: white!important;
+}
+
+.mat-tab-label {
+  color: white!important;
+}
