--- a/src/app/modales/crew-detallado/crew-detallado.component.html
+++ b/src/app/modales/crew-detallado/crew-detallado.component.html
@@ -3,14 +3,12 @@
     <h2>Crew</h2>
   </div>
   <div *ngIf="crew.length != 0">
-    <mat-tab-group animationDuration="2000ms">
+    <mat-tab-group animationDuration="2000ms" [color]="'accent'">
       <div class="card" *ngFor="let member of crew">
-        <mat-tab label="{{ member.name }}">
-          <img
-            *ngIf="member.image != null"
-            src="{{ member.image }}"
-            alt="imagen ship"
-          />
+        <mat-tab [label]="member.name">
+          <div class="justify-content-center">
+            <img *ngIf="member.image != null" src="{{ member.image }}" alt="imagen ship" />
+          </div>
           <div class="texto">
             <h3>{{ member.name }}</h3>
             <div class="status retired" *ngIf="member.status === 'retired'">
