--- a/src/app/modales/lanzamiento-detallado/lanzamiento-detallado.component.css
+++ b/src/app/modales/lanzamiento-detallado/lanzamiento-detallado.component.css
@@ -66,3 +66,10 @@ p {
   width: 80%;
   height: 30rem;
 }
+
+.slider {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
