--- a/src/app/modales/lanzamiento-detallado/lanzamiento-detallado.component.html
+++ b/src/app/modales/lanzamiento-detallado/lanzamiento-detallado.component.html
@@ -14,7 +14,7 @@
       <div *ngIf="data.photo.length != 0" class="carrousel">
         <image-slider [slides]="slides"></image-slider>
       </div>
-      <div *ngIf="data.photo.length == 0" class="carrousel">
+      <div *ngIf="data.photo.length == 0" class="carrousel slider">
         <img src="../../../assets/img/lanzamientoDefaut.jpg" alt="Imagen default">
       </div>
     </div>
